--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ header.shadow #search-icon {
     max-width: 1300px;
     margin: auto;
     width: 100%;
-    min-height: 640px;
+    min-height: 600px;
     display: flex;
     align-items: center;
     background: url('img/bg-image.jpg');
@@ -156,6 +156,7 @@ header.shadow #search-icon {
 
 .home-text {
     padding-left: 130px;
+    padding-bottom: 100px;
 }
 
 .home-text h1 {
@@ -199,75 +200,6 @@ header.shadow #search-icon {
     font-weight: 300;
 }
 
-.cars-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 2rem;
-    margin-top: 2rem;
-}
-
-.cars-container .box {
-    flex: 1 1 17rem;
-    position: relative;
-    height: 200px;
-    border-radius: 0.5rem;
-    overflow: hidden;
-}
-
-.cars-container .box img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    overflow: hidden;
-}
-
-.cars-container .box img:hover {
-    transform: scale(1.1);
-    transition: 0.5s;
-}
-
-.cars-container .box h2 {
-    position: absolute;
-    bottom: 1rem;
-    left: 1rem;
-    font-weight: 400;
-    font-size: 1rem;
-    background: var(--bg-color);
-    padding: 8px;
-    border-radius: 0.5rem;
-}
-
-.cars-container .box:hover h2 {
-    background: var(--main-color);
-    color: var(--bg-color);
-}
-
-.about {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    gap: 1.5rem;
-}
-
-.about-img,
-.about-text {
-    flex: 1 1 21rem;
-}
-
-.about-text span {
-    font-weight: 500;
-    color: var(--main-color);
-}
-
-.about-text h2 {
-    font-size: 1.7rem;
-}
-
-.about-text p {
-    font-size: 0.938rem;
-    margin: 0.5rem 0 1.4rem;
-}
-
 .parts-container {
     display: flex;
     flex-wrap: wrap;
@@ -307,72 +239,6 @@ header.shadow #search-icon {
 .parts-container .box .bx {
     color: var(--main-color);
     margin: 0.8rem 0;
-}
-
-.parts-container .box .btn {
-    max-width: 120px;
-}
-
-.parts-container .box .details {
-    display: flex;
-    align-items: center;
-    position: absolute;
-    bottom: 1.8rem;
-    right: 1rem;
-    font-size: 1rem;
-    color: var(--text-color);
-}
-
-.parts-container .box .details:hover {
-    color: var(--main-color);
-    text-decoration: underline;
-}
-
-.blog-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 2rem;
-    margin-top: 2rem;
-}
-
-.blog-container .box {
-    flex: 1 1 13rem;
-    padding: 20px;
-}
-
-.blog-container .box:hover {
-    background: #f6f6f6;
-}
-
-.blog-container .box span {
-    font-size: 0.8rem;
-    color: var(--main-color);
-}
-
-.blog-container h3 {
-    font-size: 1.2rem;
-}
-
-.blog-container .box p {
-    font-size: 0.938rem;
-    margin-block: 4px;
-}
-
-.blog-container .box .blog-btn {
-    display: flex;
-    align-items: center;
-    column-gap: 4px;
-    color: var(--text-color);
-}
-
-.blog-container .box .blog-btn .bx {
-    font-size: 20px;
-}
-
-.blog-container .box .blog-btn:hover {
-    color: var(--main-color);
-    column-gap: 0.7rem;
-    transition: 0.4s;
 }
 
 .footer {
@@ -515,18 +381,6 @@ header.shadow #search-icon {
     }
 
     .heading h2 {
-        font-size: 1.4rem;
-    }
-
-    .about {
-        flex-direction: column-reverse;
-    }
-
-    .about-text {
-        text-align: center;
-    }
-
-    .about-text h2 {
         font-size: 1.4rem;
     }
 }
