--- a/style.css
+++ b/style.css
@@ -147,7 +147,6 @@ header.shadow #search-icon {
     width: 100%;
     min-height: 600px;
     display: flex;
-    align-items: center;
     background: url('img/bg-image.jpg');
     background-repeat: no-repeat;
     background-size: cover;
@@ -156,7 +155,7 @@ header.shadow #search-icon {
 
 .home-text {
     padding-left: 130px;
-    padding-bottom: 100px;
+    padding-top: 55px;
 }
 
 .home-text h1 {
@@ -165,12 +164,6 @@ header.shadow #search-icon {
 
 .home-text span {
     color: var(--main-color);
-}
-
-.home-text p {
-    font-size: 0.938rem;
-    font-weight: 300;
-    margin: 0.5rem 0 1.2rem;
 }
 
 .btn {
@@ -228,6 +221,7 @@ header.shadow #search-icon {
 .parts-container .box h3 {
     font-size: 1.1rem;
     font-weight: 600;
+    text-align: center;
 }
 
 .parts-container .box span {
@@ -403,9 +397,5 @@ header.shadow #search-icon {
 
     .home-text h1 {
         font-size: 2rem;
-    }
-
-    .home-text p br {
-        display: contents;
     }
 }
